fix styles on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -45,8 +45,7 @@ table {
 /* Styles */
 body {
   text-align: left;
-  font-family: "Open Sans", sans-serif;
-  padding: 1em; }
+  font-family: "Open Sans", sans-serif; }
 
 p {
   text-align: left;
